--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 
     <head>
         <meta charset="UTF-8">
+        <META HTTP-EQUIV="Refresh" CONTENT="5; URL=http://www.tonSite.com/page.html">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
             integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
