--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
             integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
         <link rel="stylesheet" href="../assets/css/style.css">
-        <title>Projet React</title>
+        <title>Architech</title>
     </head>
 
     <body>
